<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.wen.foodmenuprinter.CreateMenuItemActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_new_menu_item_header"
        android:id="@+id/create_new_menu_item_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_menu_item_subtitle"
        android:id="@+id/create_new_menu_item_subtitle"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/create_new_menu_item_header"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_for_new_menu_item"
        android:layout_below="@+id/create_new_menu_item_subtitle"
        android:layout_alignLeft="@+id/create_new_menu_item_header"
        android:layout_alignStart="@+id/create_new_menu_item_header"
        android:layout_marginTop="41dp"
        android:layout_alignRight="@+id/create_new_menu_item_subtitle"
        android:layout_alignEnd="@+id/create_new_menu_item_subtitle"
        android:background="#fff2fff0"
        android:elevation="@dimen/abc_text_size_menu_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Category"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_menu_item_submit_button"
        android:id="@+id/create_menu_item_button"
        android:layout_below="@+id/name_for_new_menu_item"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp" />


</RelativeLayout>
