<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.wen.foodmenuprinter.ViewCartActivity">


    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expandableListView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/viewCartMenuSubtotalLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableListView"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/view_cart_menu_subtotal_label"
        />
    <TextView
        android:id="@+id/viewCartMenuSubtotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableListView"
        android:layout_alignTop="@+id/viewCartMenuSubtotalLabel"
        android:layout_toEndOf="@+id/viewCartMenuSubtotalLabel"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/view_cart_menu_subtotal_label"
        />

    <TextView
        android:id="@+id/viewCartMenuTotalLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewCartMenuSubtotalLabel"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/view_cart_menu_total_label"
        />

    <TextView
        android:id="@+id/viewCartMenuTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableListView"
        android:layout_alignTop="@+id/viewCartMenuTotalLabel"
        android:layout_toEndOf="@+id/viewCartMenuTotalLabel"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/view_cart_menu_total_label"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_cart_print_order_button_text"
        android:id="@+id/viewCartPrintOrderButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="174dp" />


</RelativeLayout>
